crates/rcc_driver/tests/ui/parse/nested_block_comment.c
/* outer /* inner */ still outside */
int x;
